--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,19 @@
   box-sizing: border-box;
   color: #6c6b6b;
 }
+.clearfix::before {
+   content: "";
+   display: block;
+   clear: both;
+}
 .box {
 	widows: 100%;
 	width: 100%;
 	background-color: yellow;
+}
+.box1,.box2,.box3 {
+	float: left;
+}
+section h3 {
+	text-align: center;
 }
