--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<p id="notice">
+ <%=  notice %>
+</p>
+
+    <!-- ayn? = メソッド -->
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+                  <!-- count = メソッド -->
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
+
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<h1>Editing Book</h1>
+<!-- form_for部分 -->
+<%= form_for(@book) do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+  <p></p>
+  <%= f.submit 'Update Book' %>
+<% end %>
+
+<%= link_to "Show", book_path(@book.id) %>
+<%= link_to "Back", books_path %>
