--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p id="notice">
+ <%=  notice %>
+</p>
+
+<h3>Title:<%= @book.title %></h3>
+<p></p>
+<h3>Body:<%= @book.body %></h3>
+
+<!-- edit_book_pathでコントローラーのeditを参照
+　　　()で@bookにすることでBookモデルを参照-->
+<%= link_to "Edit", edit_book_path(@book.id) %>
+<%= link_to "Back", books_path %>
